set up benchmark for zerofier computation
benchmark

zerofier 0      time:   [11.356 ns 11.362 ns 11.370 ns]

zerofier 10     time:   [310.49 ns 310.60 ns 310.73 ns]

zerofier 100    time:   [28.012 µs 28.024 µs 28.038 µs]

zerofier 1000   time:   [2.7692 ms 2.7702 ms 2.7713 ms]

zerofier 10000  time:   [273.90 ms 274.02 ms 274.14 ms]

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -79,3 +79,7 @@ harness = false
 [[bench]]
 name = "merkle_tree_auth_structure_size"
 harness = false
+
+[[bench]]
+name = "zerofier"
+harness = false
