--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -51,6 +51,7 @@ serde_json = "1.0"
 emojihash-rs = "0.2"
 get-size = { version = "^0.1.4", features = ["derive"] }
 keccak = "0.1.4"
+lending-iterator = "0.1.7"
 
 [[bench]]
 name = "tip5"
