--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -20,6 +20,7 @@ pretty_assertions = "1.4"
 proptest = "1.3"
 proptest-arbitrary-interop = "0.1"
 test-strategy = "0.3"
+trybuild = "1.0"
 
 [dev-dependencies.cargo-husky]
 version = "1"
