--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -35,6 +35,7 @@ bincode = "1.3"
 bfieldcodec_derive = "0.4.2"
 blake3 = "1.5.0"
 colored = "2.0"
+divan = "0.1.3"
 hashbrown = "0.14"
 itertools = "0.11"
 num-bigint = { version = "0.4", features = ["serde"] }
@@ -51,6 +52,7 @@ serde_json = "1.0"
 emojihash-rs = "0.2"
 get-size = { version = "^0.1.4", features = ["derive"] }
 keccak = "0.1.4"
+leveldb-sys = "2.0.9"
 
 [[bench]]
 name = "tip5"
@@ -82,4 +84,8 @@ harness = false
 
 [[bench]]
 name = "zerofier"
+harness = false
+
+[[bench]]
+name = "database"
 harness = false
