test: add bench tests in db_dbtvec.rs
Changes:
 * make some bench tests for dbtvec read/write ops.
 * rename bench/database.rs to db_leveldb.rs

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -87,5 +87,10 @@ name = "zerofier"
 harness = false
 
 [[bench]]
-name = "database"
+name = "db_leveldb"
 harness = false
+
+[[bench]]
+name = "db_dbtvec"
+harness = false
+
