feat: add iterators to StorageVec trait
Adds these StorageVec trait methods:
 iter(), iter_mut(), iter_many(), iter_many_mut(), get_mut()

also renames set_first() to set_first_n().

The trait now provides default implementations for all pre-existing
operations that involve getting or setting multiple items.

Adds a new test for iter_many_mut() and iter()

DbtVec and RustyLevelDbVec still use the original get_many() impl.
(That may change in future commit after benchmarking.)

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -53,6 +53,7 @@ emojihash-rs = "0.2"
 get-size = { version = "^0.1.4", features = ["derive"] }
 keccak = "0.1.4"
 leveldb-sys = "2.0.9"
+lending-iterator = "0.1.7"
 
 [[bench]]
 name = "tip5"
