--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -17,7 +17,7 @@ categories = ["cryptography", "mathematics"]
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 pretty_assertions = "1.4"
-proptest = "1.3"
+proptest = "1.4"
 proptest-arbitrary-interop = "0.1"
 test-strategy = "0.3"
 trybuild = "1.0"
@@ -31,11 +31,11 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 anyhow = "1.0"
 arbitrary = { version = "1", features = ["derive"] }
 bincode = "1.3"
-bfieldcodec_derive = { path = "../bfieldcodec_derive" }
+bfieldcodec_derive = "0.5"
 blake3 = "1.5.0"
 colored = "2.0"
 hashbrown = "0.14"
-itertools = "0.11"
+itertools = "0.12"
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 phf = { version = "0.11", features = ["macros"] }
