chore: remove .vscode files and add to .gitignore
This removes .vscode files and adds the directory to gitignore, so each
developer can do their own thing.

--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,8 @@ rusty-tags.vi
 # CMake
 cmake-build-*/
 
-# Unwanted VS Code files
-.vscode/dryrun.log
-.vscode/targets.log
-.vscode/configurationCache.log
+# VS Code
+.vscode/
 
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
