--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,12 @@ jobs:
           command: bench
           args: --no-run
 
+      - name: Run cargo test without non_atomic
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: -- --skip non_atomic
+
   lints:
     name: Lints
     runs-on: ubuntu-latest
