--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -28,7 +28,6 @@ default-features = false
 features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 
 [dependencies]
-anyhow = "1.0"
 arbitrary = { version = "1", features = ["derive"] }
 bincode = "1.3"
 bfieldcodec_derive = "0.5.2"
@@ -48,6 +47,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0"
 serde_derive = "1"
 serde_json = "1.0"
+thiserror = "1.0"
 emojihash-rs = "0.2"
 get-size = { version = "^0.1.4", features = ["derive"] }
 keccak = "0.1.4"
