--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ Cargo.lock
 rusty-tags.vi
 
 # Added by Makefile configuration
-/makefile-target
+**/makefile-target/
 
 # Created by https://www.toptal.com/developers/gitignore/api/clion
 # Edit at https://www.toptal.com/developers/gitignore?templates=clion
