--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -29,13 +29,19 @@ features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
 
 [dependencies]
 arbitrary = { version = "1", features = ["derive"] }
-bincode = "1.3"
 bfieldcodec_derive = "0.5.2"
+bincode = "1.3"
 blake3 = "1.5.0"
 colored = "2.1"
 divan = "0.1.8"
+emojihash-rs = "0.2"
+get-size = { version = "^0.1.4", features = ["derive"] }
 hashbrown = "0.14"
 itertools = "0.12"
+keccak = "0.1.4"
+lazy_static = "1.4.0"
+lending-iterator = "0.1.7"
+leveldb-sys = "2.0.9"
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 phf = { version = "0.11", features = ["macros"] }
@@ -48,11 +54,6 @@ serde-big-array = "0"
 serde_derive = "1"
 serde_json = "1.0"
 thiserror = "1.0"
-emojihash-rs = "0.2"
-get-size = { version = "^0.1.4", features = ["derive"] }
-keccak = "0.1.4"
-leveldb-sys = "2.0.9"
-lending-iterator = "0.1.7"
 
 [[bench]]
 name = "tip5"
