refactor: Mmr tests no longer depend on storage layer
Breaking Change

* adds src/mock that is built if `mock` feature-flag enabled
* removes `ArchivalMmr` and replaces with `MockMmr`, in memory
* removes `RustyLevelDbVec`, `DatabaseArray`, `DatabaseVec`
* use MockMmr instead of ArchivalMmr in Mmr tests

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -14,6 +14,10 @@ readme = "../README.md"
 keywords = ["polynomial", "merkle-tree", "post-quantum", "algebra", "tip5"]
 categories = ["cryptography", "mathematics"]
 
+[features]
+# include mock module
+mock = []
+
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 pretty_assertions = "1.4"
