chore: removed benches and unused dependencies

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -20,7 +20,7 @@ mock = []
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
-pretty_assertions = "1.4"
+# pretty_assertions = "1.4"
 proptest = "1.4"
 proptest-arbitrary-interop = "0.1"
 test-strategy = "0.3"
@@ -37,22 +37,18 @@ bfieldcodec_derive = "0.6"
 bincode = "1.3"
 blake3 = "1.5.0"
 colored = "2.1"
-divan = "0.1.14"
 emojihash-rs = "0.2"
 get-size = { version = "^0.1.4", features = ["derive"] }
 hashbrown = "0.14"
 itertools = "0.12"
 keccak = "0.1.5"
 lazy_static = "1.4.0"
-#lending-iterator = "0.1.7"
-#leveldb-sys = "2.0.9"
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 phf = { version = "0.11", features = ["macros"] }
 rand = { version = "0.8", features = ["min_const_gen"] }
 rand_distr = "0.4"
 rayon = "1.9"
-#rs-leveldb = "0.1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0"
 serde_derive = "1"
@@ -89,18 +85,6 @@ harness = false
 
 [[bench]]
 name = "zerofier"
-harness = false
-
-[[bench]]
-name = "db_leveldb"
-harness = false
-
-[[bench]]
-name = "db_dbtvec"
-harness = false
-
-[[bench]]
-name = "sync_atomic"
 harness = false
 
 [[bench]]
