--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -50,6 +50,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0"
 serde_derive = "1"
 serde_json = "1.0"
+sha3 = "^0.10.8"
 thiserror = "1.0"
 
 [[bench]]
