--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -70,6 +70,10 @@ name = "interpolation"
 harness = false
 
 [[bench]]
+name = "poly_div"
+harness = false
+
+[[bench]]
 name = "poly_mul"
 harness = false
 
