perf: Add benchmark for `scale`
Add a benchmark for polyonimial's `scale` method to protect ourselves
against a performance regression in this method.

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -81,9 +81,13 @@ name = "merkle_tree_auth_structure_size"
 harness = false
 
 [[bench]]
-name = "zerofier"
+name = "polynomial_scale"
 harness = false
 
 [[bench]]
 name = "various_muls"
+harness = false
+
+[[bench]]
+name = "zerofier"
 harness = false
