--- a/twenty-first/clippy.toml
+++ b/twenty-first/clippy.toml
@@ -1,1 +1,11 @@
-disallowed-names = ["foo", "bar", "foobar", "hm", "hmm", "hmmm", "hmmmm", "hmmmmm", "hmmmmmm"]
+disallowed-names = [
+    "foo",
+    "bar",
+    "foobar",
+    "hm",
+    "hmm",
+    "hmmm",
+    "hmmmm",
+    "hmmmmm",
+    "hmmmmmm",
+]
