perf: avoid allocation for scalar·polynomial

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -82,6 +82,10 @@ name = "poly_mul"
 harness = false
 
 [[bench]]
+name = "poly_scalar_mul"
+harness = false
+
+[[bench]]
 name = "poly_scale"
 harness = false
 
