feat: add hex encoding and decoding for Digest
Adds Digest::to_hex() and Digest::try_from_hex().

Also:
 * Adds a dep on `hex` crate.
 * Adds FromHexDigestError error enum
 * Adds TryFrom<&[u8]> for Digest, which is used by ::try_from_hex()
 * Adds tests for hex encoding and decoding
 * Adds tests for bytes --> Digest --> bytes roundtrip.

Note that some hex tests and the bytes roundtrip tests are presently
failing due to issue #195, which needs to be resolved.

The hex functions will be useful for a block explorer and probably
many other use-cases down the road.

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -37,6 +37,7 @@ bfieldcodec_derive = "0.7"
 blake3 = "1.5.1"
 get-size = { version = "^0.1.4", features = ["derive"] }
 hashbrown = "0.14"
+hex = "0.4.3"
 itertools = "0.12"
 lazy_static = "1.4.0"
 num-bigint = { version = "0.4", features = ["serde"] }
