--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -19,6 +19,7 @@ categories = ["cryptography", "mathematics"]
 mock = []
 
 [dev-dependencies]
+bincode = "1.3.3"
 criterion = { version = "0.5", features = ["html_reports"] }
 # pretty_assertions = "1.4"
 proptest = "1.4"
