bench: Formal power series inverse

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -121,3 +121,7 @@ harness = false
 [[bench]]
 name = "zerofier"
 harness = false
+
+[[bench]]
+name = "formal_power_series_inverse"
+harness = false
