support: Add ZerofierTree
Anticipates faster batch-evaluation.

Also: ignore conventional commit tag "support".

--- a/cliff.toml
+++ b/cliff.toml
@@ -58,6 +58,7 @@ commit_parsers = [
   { body = ".*security",          group = "<!-- 70 --> 🔒️ Security" },
   { message = "^revert",          group = "<!-- 80 --> ⏪️ Revert" },
   { message = "^style",           group = "<!-- 90 --> 🎨 Styling" },
+  { message = "^support",         skip = true },
 ]
 
 protect_breaking_commits = false
