--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -29,7 +29,7 @@ trybuild = "1.0"
 [dev-dependencies.cargo-husky]
 version = "1"
 default-features = false
-features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
+features = ["user-hooks"]
 
 [dependencies]
 arbitrary = { version = "1", features = ["derive"] }
