--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -20,11 +20,11 @@ mock = []
 
 [dev-dependencies]
 bincode = "1.3.3"
-criterion = { version = "0.5", features = ["html_reports"] }
+criterion = { version = "^0.5.1", features = ["html_reports"] }
 proptest = "1.5"
 proptest-arbitrary-interop = "0.1"
 test-strategy = "0.4"
-trybuild = "1.0"
+trybuild = "^1.0.99"
 
 [dev-dependencies.cargo-husky]
 version = "1"
@@ -40,18 +40,18 @@ hashbrown = "0.14"
 hex = "0.4.3"
 itertools = "0.13"
 lazy_static = "1.5.0"
-num-bigint = { version = "0.4", features = ["serde"] }
-num-traits = "0.2"
-phf = { version = "0.11", features = ["macros"] }
+num-bigint = { version = "^0.4.6", features = ["serde"] }
+num-traits = "^0.2.19"
+phf = { version = "^0.11.2", features = ["macros"] }
 rand = { version = "0.8", features = ["min_const_gen"] }
-rand_distr = "0.4"
+rand_distr = "^0.4.3"
 rayon = "1.10"
-serde = { version = "1.0", features = ["derive"] }
-serde-big-array = "0"
-serde_derive = "1"
-serde_json = "1.0"
+serde = { version = "^1.0.210", features = ["derive"] }
+serde-big-array = "^0.5.1"
+serde_derive = "^1.0.210"
+serde_json = "^1.0.128"
 sha3 = "^0.10.8"
-thiserror = "1.0"
+thiserror = "^1.0.64"
 
 [[bench]]
 name = "tip5"
