--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "twenty-first"
-version = "0.42.0-alpha.11"
+version = "0.43.0"
 authors = ["Triton Software AG"]
 edition = "2021"
 
