--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -35,7 +35,7 @@ features = ["user-hooks"]
 [dependencies]
 arbitrary = { version = "1", features = ["derive"] }
 bfieldcodec_derive = "0.7"
-get-size = { version = "^0.1.4", features = ["derive"] }
+get-size2 = { version = "0.1.2", features = ["derive"] }
 hashbrown = "0.15"
 hex = "0.4.3"
 itertools = "0.13"
