--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,44 +2,5 @@
 members = ["twenty-first", "bfieldcodec_derive"]
 resolver = "2"
 
-[profile.dev]
-opt-level = 0
-debug = true
-debug-assertions = true
-overflow-checks = true
-lto = false
-panic = 'unwind'
-incremental = true
-codegen-units = 256
-rpath = false
-
 [profile.release]
-opt-level = 3
-debug = false
-debug-assertions = false
-overflow-checks = false
-lto = false
-panic = 'unwind'
-incremental = false
-codegen-units = 16
-rpath = false
-
-[profile.test]
-opt-level = 0
-debug = true
-debug-assertions = true
-overflow-checks = true
-lto = false
-incremental = true
-codegen-units = 256
-rpath = false
-
-[profile.bench]
-opt-level = 3
-debug = false
-debug-assertions = false
-overflow-checks = false
-lto = false
-incremental = false
-codegen-units = 16
-rpath = false
+lto = "thin"
