--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
       - name: Install nextest
         uses: taiki-e/install-action@nextest
 
+      - name: Check max line length
+        # rustfmt gives up on lines that are too long
+        run: ! grep -rP '^.{101}' --include='*.rs' .
+
       - name: Run fmt
         run: cargo fmt --all -- --check
 
