feat: impl Zeroize for SecretKey
closes #245.

adds a dep on the zeroize crate in order to impl Zeroize for SecretKey
in a secure way that won't be optimized away by the compiler.

This is needed for GenerationSpendingKey in neptune-core.

see: https://github.com/Neptune-Crypto/twenty-first/issues/245

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -53,6 +53,7 @@ serde_derive = "1"
 serde_json = "1.0"
 sha3 = "^0.10.8"
 thiserror = "2.0"
+zeroize = { version = "1.8.1", features = ["derive"] }
 
 [[bench]]
 name = "tip5"
