--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Build documentation
-        run: cargo doc --no-deps --workspace
+        run: cargo doc --no-deps --workspace --document-private-items
         env:
           RUSTDOCFLAGS: -D warnings
 
