--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -44,8 +44,7 @@ lazy_static = "1.5.0"
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 phf = { version = "0.11", features = ["macros"] }
-rand = { version = "0.8", features = ["min_const_gen"] }
-rand_distr = "0.4"
+rand = "0.9"
 rayon = "1.10"
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0"
