--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -42,6 +42,7 @@ hashbrown = "0.15"
 hex = "0.4.3"
 itertools = "0.14"
 lazy_static = "1.5.0"
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
 num-bigint = { version = "0.4", features = ["serde"] }
 num-traits = "0.2"
 phf = { version = "0.11", features = ["macros"] }
