ci: Ignore point/patch release number

--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -18,10 +18,11 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       # Capture the version installed by the action (immediately after install)
+      # Ignore the point (patch) release number.
       - name: Capture installed rustc version
         id: installed_version
         run: |
-          INSTALLED=$(rustc --version | awk '{print $2}')
+          INSTALLED=$(rustc --version | awk '{print $2}' | awk -F. '{print $1"."$2}')
           echo "installed_version=$INSTALLED" >> $GITHUB_OUTPUT
 
       - name: Extract rust-toolchain.toml version
@@ -32,8 +33,8 @@ jobs:
 
       - name: Compare Rust versions
         run: |
-          echo "rust-toolchain.toml version: ${{ steps.toolchain_version.outputs.toolchain_version }}"
           echo "Installed rustc version:   ${{ steps.installed_version.outputs.installed_version }}"
+          echo "rust-toolchain.toml version: ${{ steps.toolchain_version.outputs.toolchain_version }}"
 
           if [[ "${{ steps.toolchain_version.outputs.toolchain_version }}" != "${{ steps.installed_version.outputs.installed_version }}" ]]; then
             echo "Mismatch: rust-toolchain.toml and installed rustc version differ"
