perf(ntt): Precalculate shared values
When doing multiple NTTs over the same domain, some values are shared
across all invocations. Those are the bitreverse indices and the powers
of omega. This commit adds functions to utilize this shared logic.

10 % speedup when executing multiple BFE NTTs and 3 % speedup in the XFE
case.

--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -67,6 +67,10 @@ name = "ntt_forward"
 harness = false
 
 [[bench]]
+name = "ntt_par"
+harness = false
+
+[[bench]]
 name = "evaluation"
 harness = false
 
