--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -16,13 +16,20 @@ keywords = ["polynomial", "merkle-tree", "post-quantum", "algebra", "tip5"]
 categories = ["cryptography", "mathematics"]
 
 [dev-dependencies]
-blake3 = "1.5.5"
 bincode = "1.3.3"
-criterion = { version = "0.6", features = ["html_reports"] }
-proptest = "1.6"
-proptest-arbitrary-interop = "0.1"
+blake3 = "1.5.5"
 test-strategy = "0.4"
 trybuild = "1.0"
+
+# dev deps for wasm32 target arch
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+criterion = { version = "0.6.0", default-features = false, features = ["html_reports"] }
+
+# dev deps for everything except wasm32 target arch
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+criterion = { version = "0.6", features = ["html_reports"] }
+proptest = { version = "1.6.0", default-features = false, features = ["std"] }
+proptest-arbitrary-interop = "0.1"
 
 [dev-dependencies.cargo-husky]
 version = "1"
@@ -47,6 +54,14 @@ serde_json = "1.0"
 sha3 = "^0.10.8"
 thiserror = "2.0"
 zeroize = { version = "1.8.1", features = ["derive"] }
+
+# deps for wasm32 target arch
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+
+# convince getrandom to build for wasm target.
+# note that there is also a flag in .cargo/config.toml
+getrandom = { version = "0.3", features = ["wasm_js"] }
+wasm-bindgen = "=0.2.100"
 
 [lints]
 workspace = true
