--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -15,6 +15,9 @@ readme.workspace = true
 keywords = ["polynomial", "merkle-tree", "post-quantum", "algebra", "tip5"]
 categories = ["cryptography", "mathematics"]
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 arbitrary = { version = "1", features = ["derive"] }
 bfieldcodec_derive = "0.7"
@@ -34,27 +37,29 @@ sha3 = "^0.10.8"
 thiserror = "2.0"
 zeroize = { version = "1.8.1", features = ["derive"] }
 
-# deps for wasm32 target arch
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-
-# convince getrandom to build for wasm target.
-# note that there is also a flag in .cargo/config.toml
-getrandom = { version = "0.3", features = ["wasm_js"] }
+getrandom = { version = "0.3", features = ["wasm_js"] } # note that there is also a flag in .cargo/config.toml
 wasm-bindgen = "=0.2.104"
 
 [dev-dependencies]
 bincode = "1.3.3"
 blake3 = "1.5.5"
+macro_rules_attr = "0.1.3"
 test-strategy = "=0.4.3"
 trybuild = "1.0"
+proptest = { version = "1.7.0", default-features = false, features = ["std"] }
+proptest-arbitrary-interop = { git = "https://github.com/dan-da/proptest-arbitrary-interop.git", version = "0.1", rev = "d9fcf5b" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 criterion = { package = "codspeed-criterion-compat", version = "4.0", features = ["html_reports"] }
-proptest = { version = "1.7.0", default-features = false, features = ["std"] }
-proptest-arbitrary-interop = "0.1"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 criterion = { version = "0.7.0", default-features = false }
+wasm-bindgen-test = "0.3.42"
+
+# Workaround for Rust 1.87.0 (see also: <https://github.com/rust-lang/rust/issues/141048>)
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-O4", "--enable-bulk-memory"]
 
 [lints]
 workspace = true
