--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -22,16 +22,18 @@ bincode = "1.3.3"
 insta = "1.42"
 test-strategy = "0.4"
 trybuild = "1.0"
+proptest-arbitrary-interop = {git="https://github.com/dan-da/proptest-arbitrary-interop.git", version = "0.1", rev="d9fcf5b"}
 
 # dev deps for wasm32 target arch
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 criterion = { version = "0.6.0", default-features = false, features = ["html_reports"] }
+proptest = { version = "1.7.0", default-features = false, features = ["std"] }
+wasm-bindgen-test = "0.3.42"
 
 # dev deps for everything except wasm32 target arch
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-proptest = { version = "1.6.0", default-features = false, features = ["std"] }
-proptest-arbitrary-interop = "0.1"
 criterion = { version = "0.6", features = ["html_reports"] }
+proptest = "1.7.0"
 
 [dev-dependencies.cargo-husky]
 version = "1"
