--- a/twenty-first/Cargo.toml
+++ b/twenty-first/Cargo.toml
@@ -45,6 +45,7 @@ wasm-bindgen = "0.2.104"
 bincode = "1.3.3"
 blake3 = "1.5.5"
 macro_rules_attr = "0.1.3"
+proptest-arbitrary-adapter = "0.1.0"
 test-strategy = "=0.4.3"
 trybuild = "1.0"
 proptest = { version = "1.7.0", default-features = false, features = ["std"] }
